> Improve:  Better (startup), because user should know a little more.[done] | Version 1.3.0
> Add:      Tell the user that the game is over when animals-alive <= 0 [done] | Version 1.3.0
> Change:   Moving it to gist. [done] | Version 1.3.0
> Change:   Rename it to `an_evoltion.lisp' because of gists fileorder [done] | Version 1.3.0
> Bugfix:   Source-Code and Download links [done] Version 1.3.0 
> Improve:  Make a smaller default map to get more animals [done] | Version 1.3.0-1
> Add:      Giving the ctype variable to the (animal-typ animal-nu) & making evolution more "real" [done] | Version 1.3.1
> Improve:  Make less Global-variables. [done] | Version 1.3.1
> Improve:  Getting a better fight-mode for animals. Included into (eatnew (animal)) [done] | Version 1.3.1
> Improve:  Replace the prin/c/t/1-lines with some beautiful (format) [done] | Version 1.3.1-1
> Add:      Make an alternative move(animal) function, to have non-random-moves too [done] | Version 1.3.2
> Improve:  Expand statistics [done] | Version 1.3.2
> Improve:  Replace strings with symbols [done] | Version 1.3.2-2
> Improve:  Speed up (draw-world) [done] | 04042013
> Change:   Moving to git [done] | 04042013
> Change:   Moved to SBCL from CLISP to test Source [done] | 04042013
> Change:   Deleted (down-source)-function + updated source-link [done] | 04042013
> Improve:  Speedup move-logic a bit [done] | 20072013  
> Improve:  Remove some ;princ and general code-beauty [done] | 20072013
> Bugfix:   Replace (bye) with (exit) [done] | 21072013
> Improve:  Have a look at (move-logic) (spreadfire) & (checkfortarget) [todo]
> Improve:  Make the functions more functional, add tail calls etc. [todo]
> Improve:  Get lazy-programming when it's possible [todo]
> Add:      Implement an svg evolution-map to view at a webbrowser [todo]
> Add:      Get a full GUI into a webserver [todo]
> Bugfix:   move-logic() Because of endless loop with two animals. [wont fix] | This "simulates" a fight. 
