@@ -22,12 +22,14 @@
    No need to do this for carnivores"
   (let ((pos (cons (animal-x animal) (animal-y animal))))
     (when (gethash pos *plants*)
+      (dbg :ael "A plant was eaten by an ~a~%" (animal-typ animal))
       ;; The older they get, the less energy they will get. It's that easy:
       (incf (animal-energy animal) (round (- *plant-energy* (* 0.1 (animal-age animal)))))
       (incf *tmp-eaten-plants*)
       (incf *plants-eaten*)
       ;; Chance of 1/5 to change the sick-status by eating plants:
       (if (= (random 5) 4)
+        (dbg :ael "An animal got sick.")
         (setf (animal-sick animal) (not (animal-sick animal))))
       (remhash pos *plants*))))
 
@@ -37,7 +39,7 @@
    Functions should be logical to understand - Same pos = eat it
    Age of the victim must be > 5 to be eaten. Otherwise Parents would kill their children.
    Added genes here, because self-eating got a problem."
- (let ((success 0) (energy-loose 0) (damage 0) (sick-victim 0))
+ (let ((success nil) (energy-loose 0) (damage 0) (sick-victim 0))
   (let ((posa (cons (animal-x animal) (animal-y animal)))(gena (animal-genes animal)) (agea (animal-age animal)) (energya (animal-energy animal)))
     (mapc (lambda (animal)
             (let ((posb (cons (animal-x animal) (animal-y animal))) (ageb (animal-age animal)) (genb (animal-genes animal)) (energyb (animal-energy animal)))
@@ -51,19 +53,22 @@
                 (when (>= energy-loose energyb)
                   (incf *tmp-eaten-animals*)
                   (incf *animals-eaten*)
-                  (setf success 1)
+                  (setf success t)
                   (when (equal (animal-sick animal) T)
                     (setf sick-victim 1))
                   (setf (animal-energy animal) 0))
                 (when (not (>= energy-loose energyb))
-                  (setf success 0)
+                  (dbg :ael "The animal lost some energy in the fight~%")
+                  (setf success nil)
                   (decf (animal-energy animal) energy-loose))))) 
           *animals*))
   (decf (animal-energy animal) damage)
-  (when (= success 1)
+  (when success 
+    (dbg :ael "The animal successfully killed an other one and ate it~%")
     ;; Same as we do with the plants. higher age => less energy:
     (incf (animal-energy animal) (round (- *animal-energy* (* 0.1 (animal-age animal)))))
     (when (= sick-victim 1)
+      (dbg :ael "The ~a got ill from eating a sick animal.~%" (animal-typ animal))
       (setf (animal-sick animal) T)))))
 
 
