@@ -54,12 +54,18 @@
             (setf (animal-y animal) (+ (animal-y animal) 1)))
           (if (> (cadr workwith) posy)
             (setf (animal-y animal) (- (animal-y animal) 1))))
-        (setf ismoved t)(incf *tmp-logic-moves*) (incf *logic-moves*))
+        (dbg :ael "A logic move was done because of fire.~%")
+        (setf ismoved t)
+        (incf *tmp-logic-moves*)
+        (incf *logic-moves*))
        ((and (> (length plantlist) 0) (or (equal (animal-typ animal) 'herbivore) (equal (animal-typ animal) 'omnivore)) (equal ismoved nil))
         (let ((workwith (nth (random (length plantlist)) plantlist)))
           (setf (animal-x animal) (car workwith))
           (setf (animal-y animal) (cadr workwith)))
-        (setf ismoved t) (incf *tmp-logic-moves*) (incf *logic-moves*))
+        (dbg :ael "A logic move was done because of a plant to eat.~%")
+        (setf ismoved t)
+        (incf *tmp-logic-moves*)
+        (incf *logic-moves*))
        ((and (> (length animallist) 0) (equal ismoved nil))
         (let ((workwith (nth (random (length animallist)) animallist)))
           (if (and (equal (animal-typ animal) "herbivore") (not (equal (caddr workwith) "herbivore")))
@@ -72,11 +78,15 @@
                (setf (animal-y animal) (+ (animal-y animal) 1)))
              (if (> (cadr workwith) posy)
                (setf (animal-y animal) (- (animal-y animal) 1)))
-             (setf ismoved t)(incf *tmp-logic-moves*) (incf *logic-moves*))
+             (dbg :ael "A herbivore moved away from an enemy.~%")
+             (setf ismoved t)
+             (incf *tmp-logic-moves*)
+             (incf *logic-moves*))
            (if (not (equal (animal-typ animal) (caddr workwith)))
              (progn
                (setf (animal-x animal) (car workwith))
                (setf (animal-y animal) (cadr workwith))
+               (dbg :ael "An animal moved to another, because it is hungry and needs to fight.~%")
                (setf ismoved t)(incf *tmp-logic-moves*) (incf *logic-moves*))
              (progn
                (move animal))))))
