@@ -28,28 +28,29 @@
   "Same types will reproduce of course
    When there is any omnivore, the child-typ will be random.
    Carnivores & herbivores can't have sex."
-  (let ((child-typ 'none) (success 0)) 
+  (let ((child-typ 'none) (success nil)) 
   (let ((pos (cons (animal-x animal) (animal-y animal))) (gena (animal-genes animal)) (agea (animal-age animal)) (typa (animal-typ animal)) (sexa (animal-sex animal)))
       (mapc (lambda (animal)
               (let ((posa (cons (animal-x animal) (animal-y animal))) (ageb (animal-age animal)) (genb (animal-genes animal)) (typb (animal-typ animal)) (sexb (animal-sex animal)))
                 (when (and (not (equal sexa sexb))(equal pos posa) (> agea  5) (> ageb 5) (not (equal gena genb)) (evenp (+ (car gena) (car genb))))
                   (when (and (not (equal typa 'omnivore)) (equal typa typb) (not (equal typb 'omnivore)))
                     (setf child-typ typa)
-                    (setf success 1)
+                    (setf success t)
                     (sexeff gena genb))
                   (when (or (and (equal typa 'carnivore) (equal typb 'herbivore)) (and (equal typa 'herbivore) (equal typb 'carnivore)))
-                    (setf success 0))
+                    (setf success nil))
                   (when (or (equal typa 'omnivore) (equal typb 'omnivore))
                     (setf child-typ 'none)
-                    (setf success 1)
+                    (setf success t)
                     (sexeff gena genb))
-                  (when (and (= success 1)(equal sexb 'f))
+                  (when (and success (equal sexb 'f))
                     (setf (animal-ctyp animal) child-typ)
                     (setf (animal-preg animal) 1)
                     (setf (animal-cfact animal) *efficiency*)
                     (setf *efficiency* 0)))))
             *animals*))
-  (when (and (= success 1) (equal (animal-sex animal) 'f))
+  (when (and success (equal (animal-sex animal) 'f))
+    (dbg :ael "Sex was successful and a new ~a will be born soon.~%" child-typ)
     (setf (animal-ctyp animal) child-typ)
     (setf (animal-cfact animal) *efficiency*)
     (setf *efficiency* 0)
